tests/ui/consts/const-eval/field-access-after-const-eval-fail-in-ty.stderr
error: constant evaluation is taking a long time
  --> $DIR/field-access-after-const-eval-fail-in-ty.rs:4:10
   |
LL |     [(); loop {}].field;
   |          ^^^^^^^
   |
   = note: this lint makes sure the compiler doesn't get stuck due to infinite loops in const eval.
           If your compilation actually takes a long time, you can safely allow the lint.
help: the constant being evaluated
  --> $DIR/field-access-after-const-eval-fail-in-ty.rs:4:10
   |
LL |     [(); loop {}].field;
   |          ^^^^^^^
   = note: `#[deny(long_running_const_eval)]` on by default

error: aborting due to 1 previous error

